--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
-    background-image: url(assets/icon.png);
+    background-image: url(icon.png);
     border-radius: 20px;
 }
 
